--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,18 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.vanniktech:gradle-android-javadoc-plugin:0.3.0"
+    }
+}
+
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
 }
+
+apply plugin: "com.vanniktech.android.javadoc"
 
 android {
     compileSdk 31
